--- a/pages/osu/osu-cutt37.html
+++ b/pages/osu/osu-cutt37.html
@@ -40,16 +40,18 @@
 
 		<h2>Skin</h2>
 		<div class="container">
-			<p>Version: Release-v2-240517<br>
+			<p>Version: Release-v2-240518<br>
+			U(nstable) means skin works badly.
 			F(inal) means the last update at version x.x<br>
 			Notice: hd(@2x), std and mania only.</p>
 			
-			<p>Mediafire: <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Download</a><br>
-			From local: <a href="../../files/packages/global/Idontknow.osk">Download</a></p>
+			<p>Mediafire(osk): <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Download</a><br>
+			From local(osk): <a href="../../files/packages/global/Idontknow.osk">Download</a><br>
+			From local(zip): <a href="../../files/packages/global/Idontknow.zip">Download</a></p>
 
 			<p>Source:<br>
 			Public, no license.<br>
-			From local: <a href="../../files/packages/global/Container.zip" id="d3">Download</a></p>
+			From local: <a href="../../files/packages/global/Source.zip">Download</a></p>
 			</p>
 		</div>
 	</div>
