--- a/pages/osu/osu-cutt37.html
+++ b/pages/osu/osu-cutt37.html
@@ -45,9 +45,9 @@
 			F(inal) means the last update at version x.x<br>
 			Notice: hd(@2x), std and mania only.</p>
 			
-			<p>Mediafire(osk): <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Download</a><br>
-			From local(osk): <a href="../../files/packages/global/Idontknow.osk">Download</a><br>
-			From local(zip): <a href="../../files/packages/global/Idontknow.zip">Download</a></p>
+			<p>Mediafire(zip): <a href="https://mediafire.com/file/kijfv4rrobuwpkp/Idontknow.zip/file">Download</a><br>
+			Mediafire(osk): <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Download</a><br>
+			From local(osk): <a href="../../files/packages/global/Idontknow.osk">Download</a></p>
 
 			<p>Source:<br>
 			Public, no license.<br>
