--- a/pages/osu/osu-cutt37.html
+++ b/pages/osu/osu-cutt37.html
@@ -40,10 +40,8 @@
 
 		<h2>Skin</h2>
 		<div class="container">
-			<p>Version: Release-v2-240518<br>
-			U(nstable) means skin works badly.
-			F(inal) means the last update at version x.x<br>
-			Notice: hd(@2x), std and mania only.</p>
+			<p>Version: Release-v2-240521<br>
+			Notice: hd(@2x), std only.</p>
 			
 			<p>Mediafire(zip): <a href="https://mediafire.com/file/kijfv4rrobuwpkp/Idontknow.zip/file">Download</a><br>
 			Mediafire(osk): <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Download</a><br>
