--- a/pages/osu/osu-cutt37.html
+++ b/pages/osu/osu-cutt37.html
@@ -40,7 +40,9 @@
 
 		<h2>Skin</h2>
 		<div class="container">
-			<p>Version: Release-v2-240521<br>
+			<p>Version: Release-v2-240525S<br>
+			S: Stable, but I suggest wait for final version.<br>
+			F: Final, the last version of Release-XX-xxxxxx<br>
 			Notice: hd(@2x), std only.</p>
 			
 			<p>Mediafire(zip): <a href="https://mediafire.com/file/kijfv4rrobuwpkp/Idontknow.zip/file">Download</a><br>
