--- a/pages/osu/osu-cutt37.html
+++ b/pages/osu/osu-cutt37.html
@@ -21,7 +21,13 @@
 			<p>Hello, there.<br>
 			Welcome to my website.</p>
 			
-			<p>Status: Not active(Rest)</p>
+			<p>Status: Not so active</p>
+			
+			<p>Preset:<br>
+			Computer: Dell Inspiron 15-3530 with Intel i5-1335U(Idk why it's 1334U now) edition;<br>
+			Mouse: Honor AD20 Mouse(wireless);<br>
+			Keyboard: Sayo O2C with Kailh Box White;<br>
+			Play style: 95% alternate.</p>
 		</div>
 
 		<h2>Some configs(Any linux)</h2>
