--- a/pages/osu/osu-cutt37.html
+++ b/pages/osu/osu-cutt37.html
@@ -21,7 +21,9 @@
 			<p>Hello, there.<br>
 			Welcome to my website.</p>
 			
-			<p>Status: Not so active</p>
+			<p>Status: Not so active<br>
+			Active at: Weekends - 8:00 to 18:00(UTC+8)
+			</p>
 			
 			<p>Preset:<br>
 			Computer: Dell Inspiron 15-3530 with Intel i5-1335U(Idk why it's 1334U now) edition;<br>
