--- a/pages/osu/osu-cutt37.html
+++ b/pages/osu/osu-cutt37.html
@@ -21,7 +21,7 @@
 			<p>Hello, there.<br>
 			Welcome to my website.</p>
 			
-			<p>Status: Quit for a while</p>
+			<p>Status: Not so active.</p>
 			
 			<p>Preset:<br>
 			Computer: Dell Inspiron 15-3530 with Intel i5-1335U(Idk why it's 1334U now) edition;<br>
@@ -46,13 +46,12 @@
 
 		<h2>Skin</h2>
 		<div class="container">
-			<p>Version: Release-v2-240525S<br>
+			<p>Version: Release-v2-240606F<br>
 			S: Stable, but I suggest wait for final version.<br>
 			F: Final, the last version of Release-XX-xxxxxx<br>
 			Notice: hd(@2x), std only.</p>
 			
-			<p>Mediafire(zip): <a href="https://mediafire.com/file/kijfv4rrobuwpkp/Idontknow.zip/file">Download</a><br>
-			Mediafire(osk): <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Download</a><br>
+			<p>Mediafire(osk): <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Download</a><br>
 			From local(osk): <a href="../../files/packages/global/Idontknow.osk">Download</a></p>
 
 			<p>Source:<br>
