--- a/pages/osu/osu-cutt37.html
+++ b/pages/osu/osu-cutt37.html
@@ -21,6 +21,8 @@
 			<p>Hello, there.<br>
 			Welcome to my website.</p>
 			
+			<p><s>I want 37 fans in total.</s></p>
+
 			<p>Status: Not so active.</p>
 			
 			<p>Preset:<br>
