--- a/pages/osu/osu-cutt37.html
+++ b/pages/osu/osu-cutt37.html
@@ -21,15 +21,16 @@
 			<p>Hello, there.<br>
 			Welcome to my website.</p>
 			
-			<p><s>I want 37 fans in total.</s></p>
-
-			<p>Status: Not so active.</p>
+			<p>Status: Not active.<br>
+			Fuck that I cannot improve anymore(Makes me so sad).<br>
+			Fuck osu skin which I hated the most(Waste my time).<br>
+			Fuck osu maps which looks like a shit(Not interesting, too typical).
+			</p>
 			
 			<p>Preset:<br>
 			Computer: Dell Inspiron 15-3530 with Intel i5-1335U(Idk why it's 1334U now) edition;<br>
 			Mouse: Honor AD20 Mouse(wireless);<br>
-			Keyboard: Sayo O2C with Kailh Box White;<br>
-			Play style: 95% alternate.</p>
+			Keyboard: Sayo O2C with Kailh Box White;</p>
 		</div>
 
 		<h2>Some configs(Any linux)</h2>
