--- a/pages/osu/osu-cutt37.html
+++ b/pages/osu/osu-cutt37.html
@@ -21,11 +21,7 @@
 			<p>Hello, there.<br>
 			Welcome to my website.</p>
 			
-			<p>Status: Not active.<br>
-			Fuck that I cannot improve anymore(Makes me so sad).<br>
-			Fuck osu skin which I hated the most(Waste my time).<br>
-			Fuck osu maps which looks like a shit(Not interesting, too typical).
-			</p>
+			<p>Status: Not active.</p>
 			
 			<p>Preset:<br>
 			Computer: Dell Inspiron 15-3530 with Intel i5-1335U(Idk why it's 1334U now) edition;<br>
@@ -35,7 +31,7 @@
 
 		<h2>Some configs(Any linux)</h2>
 		<div class="container">
-			<p>Mouse acceleration: -0.45(Current)</p>
+			<p>Mouse acceleration: -0.4(Current)</p>
 			
 			<p>50-mouse-acceleration.conf<br>
 			Section "InputClass"<br>
@@ -43,15 +39,13 @@
 			&emsp;Driver "libinput"<br>
 			&emsp;MatchIsPointer "yes"<br>
 			&emsp;Option "AccelProfile" "<u>flat</u>"<br>
-			&emsp;Option "AccelSpeed" "-0.48"<br>
+			&emsp;Option "AccelSpeed" "-0.45"<br>
 			EndSection</p>
 		</div>
 
 		<h2>Skin</h2>
 		<div class="container">
-			<p>Version: Release-v2-240606F<br>
-			S: Stable, but I suggest wait for final version.<br>
-			F: Final, the last version of Release-XX-xxxxxx<br>
+			<p>Version: Release-v2-240622-Fix<br>
 			Notice: hd(@2x), std only.</p>
 			
 			<p>Mediafire(osk): <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Download</a><br>
