--- a/pages/osu/osu-cutt37.html
+++ b/pages/osu/osu-cutt37.html
@@ -21,11 +21,13 @@
 			<p>Hello, there.<br>
 			Welcome to my website.</p>
 			
-			<p>Status: Not active.</p>
+			<p>Status: Not active.<br>
+			I want beatmaps.<br>
+			I can't improve for now.</p>
 			
 			<p>Preset:<br>
 			Computer: Dell Inspiron 15-3530 with Intel i5-1335U(Idk why it's 1334U now) edition;<br>
-			Mouse: Honor AD20 Mouse(wireless);<br>
+			Mouse: Honor AD20 Mouse;<br>
 			Keyboard: Sayo O2C with Kailh Box White;</p>
 		</div>
 
