--- a/pages/osu/osu-cutt37.html
+++ b/pages/osu/osu-cutt37.html
@@ -27,7 +27,7 @@
 			
 			<p>Preset:<br>
 			Computer: Dell Inspiron 15-3530 with Intel i5-1335U(Idk why it's 1334U now) edition;<br>
-			Mouse: Honor AD20 Mouse;<br>
+			Mouse: Logitech G102;<br>
 			Keyboard: Sayo O2C with Kailh Box White;</p>
 		</div>
 
