--- a/pages/osu/osu-cutt37.html
+++ b/pages/osu/osu-cutt37.html
@@ -47,7 +47,7 @@
 
 		<h2>Skin</h2>
 		<div class="container">
-			<p>Version: Release-v2-240703-Fix2<br>
+			<p>Version: Release-v3-240711<br>
 			Notice: hd(@2x), std only.</p>
 			
 			<p>Mediafire(osk): <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Download</a><br>
