--- a/pages/osu/osu-cutt37.html
+++ b/pages/osu/osu-cutt37.html
@@ -21,19 +21,19 @@
 			<p>Hello, there.<br>
 			Welcome to my website.</p>
 			
-			<p>Status: Not active.<br>
+			<p>Status: Casual.<br>
 			I want beatmaps.<br>
 			I can't improve for now.</p>
 			
 			<p>Preset:<br>
-			Computer: Dell Inspiron 15-3530 with Intel i5-1335U(Idk why it's 1334U now) edition;<br>
+			Computer: Dell Inspiron 15-3530 with Intel i5-1335U;<br>
 			Mouse: Logitech G102;<br>
 			Keyboard: Sayo O2C with Kailh Box White;</p>
 		</div>
 
 		<h2>Some configs(Any linux)</h2>
 		<div class="container">
-			<p>Mouse acceleration: -0.4(Current)</p>
+			<p>Mouse acceleration: -0.5(Current)</p>
 			
 			<p>50-mouse-acceleration.conf<br>
 			Section "InputClass"<br>
@@ -47,14 +47,14 @@
 
 		<h2>Skin</h2>
 		<div class="container">
-			<p>Version: Release-v3-240711<br>
+			<p>Version: Release-v3-240715<br>
 			Notice: hd(@2x), std only.</p>
 			
 			<p>Mediafire(osk): <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Download</a><br>
 			From local(osk): <a href="../../files/packages/global/Idontknow.osk">Download</a></p>
 
 			<p>Source:<br>
-			Public, no license.<br>
+			You can use this template for free.<br>
 			From local: <a href="../../files/packages/global/Source.zip">Download</a></p>
 			</p>
 		</div>
