--- a/pages/arch/others.html
+++ b/pages/arch/others.html
@@ -43,7 +43,7 @@
 			<p>winetricks<br>
 			Select "Select the default wineprefix"<br>
 			Select "Install a Windows DLL or component"<br>
-			Select "dotnet40"</p>
+			Select "dotnet40" and "dotnet45"</p>
 
 			<p>mkdir your_folder<br>
 			wine your_file.exe</p>
