--- a/pages/osu/osu-cutt37.html
+++ b/pages/osu/osu-cutt37.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Osu infos</title>
+	<title>Osu infos :D</title>
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,19 +16,17 @@
 
 <body>
 	<div id="Article">
-		<h2>Introduce</h2>
+		<h1>Introduce</h1>		
 		<div class="container">
 			<p>Hello, there.<br>
 			Welcome to my website.</p>
 			
-			<p>Status: Casual.<br>
-			I want beatmaps.<br>
-			I can't improve for now.</p>
-			
+			<p>Status: Normal(on osu-lazer).</p>
+
 			<p>Preset:<br>
-			Computer: Dell Inspiron 15-3530 with Intel i5-1335U;<br>
-			Mouse: Logitech G102;<br>
-			Keyboard: Sayo O2C with Kailh Box White;</p>
+			Computer: Dell Inspiron 15-3530(with Intel i5-1335U edit.);<br>
+			Mouse: Logitech G102 (with 3 acceleration);<br>
+			Keyboard: Sayo O2C;</p>
 		</div>
 
 		<h2>Some configs(Any linux)</h2>
@@ -41,20 +39,21 @@
 			&emsp;Driver "libinput"<br>
 			&emsp;MatchIsPointer "yes"<br>
 			&emsp;Option "AccelProfile" "<u>flat</u>"<br>
-			&emsp;Option "AccelSpeed" "-0.45"<br>
+			&emsp;Option "AccelSpeed" "-0.5"<br>
 			EndSection</p>
 		</div>
 
 		<h2>Skin</h2>
 		<div class="container">
-			<p>Version: Release-v3-240715<br>
-			Notice: hd(@2x), std only.</p>
+			<p>Version: Release-v3-240816<br>
+			Note: hd(@2x), std+mania.<br>
+            Please wait for several minutes to download the skin(I have to upload the skin).</p>
 			
 			<p>Mediafire(osk): <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Download</a><br>
 			From local(osk): <a href="../../files/packages/global/Idontknow.osk">Download</a></p>
 
 			<p>Source:<br>
-			You can use this template for free.<br>
+			Public, no license.<br>
 			From local: <a href="../../files/packages/global/Source.zip">Download</a></p>
 			</p>
 		</div>
