--- a/pages/others/any.html
+++ b/pages/others/any.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Some various stuff :/</title>
+	<title>:/</title>
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,21 +18,16 @@
 	<div id="Article">
 		<h2>Some notes(gimp)</h2>
 		<div class="container">
-			<p>Denoise+Sharpen:<br>			
+			<p>Denoise+Sharpen:<br>
 			Filters->Blur->Selective Gaussian Blur<br>
 			Filters->Blur->Median Blur<br>
+            'Ctrl+,' or 'Ctrl+.' Fill bg/fg<br>
 			Filters->Enhance->Sharpen(Unsharp Mask)</p>
-			
-			<p>Sometimes noises appear on single color,<br>
-			I think it's not necessary to use filter again so I'll just fill the color above the noises.</p>
-			
 		</div>
 		
 		<h2>Fixing stuff(I'm not sure good or bad)</h2>
 		<div class="container">
-			<p>Well, to practice my gimp skill.<br>
-			I like this wallpaper, but the origin one looks terrible so I fixed it.</p>
-
+            <p>:Kano:</p>
 			<p>Mediafire: <a href="https://mediafire.com/file/b4xr1gswoqd3x3p/Kano.xcf/file">Download</a></p>
 		</div>
 	</div>
