--- a/index.html
+++ b/index.html
@@ -11,38 +11,22 @@
 	<link rel="stylesheet" type="text/css" href="./files/styles/colors.css">
 
 	<script type="text/javascript" src="./scripts/main.js"></script>
+	<script type="text/javascript" src="./scripts/fonts.js"></script>
+	<script type="text/javascript" src="./scripts/colors.js"></script>
 	<script type="text/javascript" data-domain="cutt37.is-a.dev" src="https://analytics.is-a.dev/js/script.js"></script>
 </head>
 
 <body>
 	<div id="Menu">
 		<a href="./" id="current">Home</a>
-		<a href="./pages/arch/arch.html" id="available">Archlinux Installation</a>
-		<a href="./pages/osu/osu-cutt37.html" id="available">My osu! infos</a>
-		<a href="./pages/others/any.html" id="available">Various stuff</a>
+		<a href="./pages/arch/arch.html" id="available">Archlinux-Installation</a>
+		<a href="./pages/osu/osu-cutt37.html" id="available">My-osu!-infos</a>
+		<a href="./pages/others/any.html" id="available">Various-stuff</a>
 	</div>
 
-	<h1>Read before:</h1>
-	<div id="Article">
-		<ol>
-			<li>Don't use wine-mono from any linux provider, doesn't work.<br>
-				But if you can't uninstall it, instead,<br>
-				delete it using winetricks(select the default... &minus;&gt; Run uninstaller),<br>
-				and use winetricks to install dotnet40.</li>
-
-			<li>Download the packages you really <b>need</b>.<br>
-				Do NOT completely follow my guide, some are optional.</li>
-
-			<li>This is a place to save I've learned.</li>
-
-			<li>Still suggest you'd better keep windows.<br>
-				It's pretty hard to find or install packages.</li>
-
-			<li>Forgive my bad English, I'm trying my best.</li>
-
-			<li>If you find some problems on this website, you can mail me.<br>
-			cutt37@outlook.com</li>
-		</ol>
+	<div id="Footer">
+		<p>If you find some problems on this website, you can mail to:<br>
+		cutt37@outlook.com</p>
 	</div>
 </body>
 </html>
