--- a/pages/others/any.html
+++ b/pages/others/any.html
@@ -11,7 +11,6 @@
 	<link rel="stylesheet" type="text/css" href="../../files/styles/colors.css">
 	
 	<script type="text/javascript" src="../../files/scripts/main.js" defer></script>
-	<script type="text/javascript" data-domain="cutt37.is-a.dev" src="https://analytics.is-a.dev/js/script.js" defer></script>
 </head>
 
 <body>
@@ -19,10 +18,10 @@
 		<h2>Some notes(gimp)</h2>
 		<div class="container">
 			<p>Denoise+Sharpen:<br>
-			Filters->Blur->Selective Gaussian Blur<br>
-			Filters->Blur->Median Blur<br>
+			Filters-&gt;Blur-&gt;Selective Gaussian Blur<br>
+			Filters-&gt;Blur-&gt;Median Blur<br>
             'Ctrl+,' or 'Ctrl+.' Fill bg/fg<br>
-			Filters->Enhance->Sharpen(Unsharp Mask)</p>
+			Filters-&gt;Enhance-&gt;Sharpen(Unsharp Mask)</p>
 		</div>
 		
 		<h2>Fixing stuff(I'm not sure good or bad)</h2>
