--- a/index.html
+++ b/index.html
@@ -13,15 +13,14 @@
 	<script type="text/javascript" src="./scripts/main.js"></script>
 	<script type="text/javascript" src="./scripts/fonts.js"></script>
 	<script type="text/javascript" src="./scripts/colors.js"></script>
-	<script type="text/javascript" data-domain="cutt37.is-a.dev" src="https://analytics.is-a.dev/js/script.js"></script>
 </head>
 
 <body>
 	<div id="Menu">
 		<a href="./" id="current">Home</a>
-		<a href="./pages/arch/arch.html" id="available">Archlinux-Installation</a>
-		<a href="./pages/osu/osu-cutt37.html" id="available">My-osu!-infos</a>
-		<a href="./pages/others/any.html" id="available">Various-stuff</a>
+		<a href="./pages/arch/arch.html" class="available">Archlinux-Installation</a>
+		<a href="./pages/osu/osu-cutt37.html" class="available">My-osu!-infos</a>
+		<a href="./pages/others/any.html" class="available">Various-stuff</a>
 	</div>
 
 	<div id="Footer">
