--- a/pages/arch/arch.html
+++ b/pages/arch/arch.html
@@ -11,12 +11,11 @@
 	<link rel="stylesheet" type="text/css" href="../../files/styles/colors.css">
 
 	<script type="text/javascript" src="../../files/scripts/main.js" defer></script>
-	<script type="text/javascript" data-domain="cutt37.is-a.dev" src="https://analytics.is-a.dev/js/script.js" defer></script>	
 </head>
 
 <body>
 	<div id="Menu">
-		<a href="../../" id="available">Menu</a>
+		<a href="../../" class="available">Menu</a>
 		<a href="./" id="current">Arch</a>
 		<a href="./config" class="available">Config</a>
 		<a href="./others" class="available">Others</a>
