--- a/pages/osu/osu-cutt37.html
+++ b/pages/osu/osu-cutt37.html
@@ -19,12 +19,10 @@
 		<div class="container">
 			<p>Hello, there.<br>
 			Welcome to my website.</p>
-			
-			<p>Status: Normal(on osu-lazer).</p>
 
 			<p>Preset:<br>
-			Computer: Dell Inspiron 15-3530(with Intel i5-1335U edit.);<br>
-			Mouse: Logitech G102 (with 3 acceleration);<br>
+			Computer: Dell Inspiron 15-3530(with Intel i5-1335U);<br>
+			Mouse: Logitech G102 (3 acceleration);<br>
 			Keyboard: Sayo O2C;</p>
 		</div>
 
@@ -44,15 +42,15 @@
 
 		<h2>Skin</h2>
 		<div class="container">
-			<p>Version: Release-v3-240816<br>
-			Note: hd(@2x), std+mania.<br>
+			<p>Version: Release-v3-240916<br>
+			Note: only hd(@2x), std+mania.<br>
             Please wait for several minutes to download the skin(I have to upload the skin).</p>
 			
 			<p>Mediafire(osk): <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Download</a><br>
 			From local(osk): <a href="../../files/packages/global/Idontknow.osk">Download</a></p>
 
 			<p>Source:<br>
-			Public, no license.<br>
+			You can download this and do whatever you want.<br>
 			From local: <a href="../../files/packages/global/Source.zip">Download</a></p>
 			</p>
 		</div>
