--- a/pages/osu/osu-cutt37.html
+++ b/pages/osu/osu-cutt37.html
@@ -42,7 +42,7 @@
 
 		<h2>Skin</h2>
 		<div class="container">
-			<p>Version: Release-v3-240916-2<br>
+			<p>Version: Release-v3-240917<br>
 			Note: only hd(@2x), std+mania.<br>
             Please wait for several minutes to download the skin(I have to upload the skin).</p>
 			
