--- a/pages/osu/osu-cutt37.html
+++ b/pages/osu/osu-cutt37.html
@@ -20,10 +20,13 @@
 			<p>Hello, there.<br>
 			Welcome to my website.</p>
 
+			<p>Active on lazer-osu.</p>
+
 			<p>Preset:<br>
 			Computer: Dell Inspiron 15-3530(with Intel i5-1335U);<br>
 			Mouse: Logitech G102 (3 acceleration);<br>
-			Keyboard: Sayo O2C;</p>
+			Keyboard: Sayo O2C;
+			Typing: Alternate;</p>
 		</div>
 
 		<h2>Some configs(Any linux)</h2>
@@ -51,6 +54,7 @@
 
 			<p>Source:<br>
 			You can download this and do whatever you want.<br>
+			Be careful with the usage of fonts.<br>
 			From local: <a href="../../files/packages/global/Source.zip">Download</a></p>
 			</p>
 		</div>
