--- a/pages/osu/osu-cutt37.html
+++ b/pages/osu/osu-cutt37.html
@@ -45,7 +45,7 @@
 
 		<h2>Skin</h2>
 		<div class="container">
-			<p>Version: Release-v3-240917<br>
+			<p>Version: Release-v3-240918<br>
 			Note: only hd(@2x), std+mania.<br>
             Please wait for several minutes to download the skin(I have to upload the skin).</p>
 			
@@ -53,7 +53,7 @@
 			From local(osk): <a href="../../files/packages/global/Idontknow.osk">Download</a></p>
 
 			<p>Source:<br>
-			You can download this and do whatever you want.<br>
+			You can download this and modify whatever you want.<br>
 			Be careful with the usage of fonts.<br>
 			From local: <a href="../../files/packages/global/Source.zip">Download</a></p>
 			</p>
