--- a/pages/osu/osu-cutt37.html
+++ b/pages/osu/osu-cutt37.html
@@ -27,6 +27,8 @@
 			Mouse: Logitech G102 (3 acceleration);<br>
 			Keyboard: Sayo O2C;
 			Typing: Alternate;</p>
+
+			<p>Skill improved :&gt;</p>
 		</div>
 
 		<h2>Some configs(Any linux)</h2>
@@ -45,7 +47,7 @@
 
 		<h2>Skin</h2>
 		<div class="container">
-			<p>Version: Release-v3-240918<br>
+			<p>Version: Release-v3-240919<br>
 			Note: only hd(@2x), std+mania.<br>
             Please wait for several minutes to download the skin(I have to upload the skin).</p>
 			
