--- a/pages/osu/osu-cutt37.html
+++ b/pages/osu/osu-cutt37.html
@@ -28,7 +28,7 @@
 			Keyboard: Sayo O2C;
 			Typing: Alternate;</p>
 
-			<p>Skill improved :&gt;</p>
+			<p>Quit for 3 months.</p>
 		</div>
 
 		<h2>Some configs(Any linux)</h2>
@@ -47,7 +47,7 @@
 
 		<h2>Skin</h2>
 		<div class="container">
-			<p>Version: Release-v3-241001<br>
+			<p>Version: Release-v3-241002<br>
 			Note: only hd(@2x), std+mania.<br>
             Please wait for several minutes to download the skin(I have to upload the skin).</p>
 			
