--- a/pages/osu/osu-cutt37.html
+++ b/pages/osu/osu-cutt37.html
@@ -23,12 +23,10 @@
 			<p>Active on lazer-osu.</p>
 
 			<p>Preset:<br>
-			Computer: Dell Inspiron 15-3530(with Intel i5-1335U);<br>
+			Computer: Dell Inspiron 15-3530;<br>
 			Mouse: Logitech G102 (3 acceleration);<br>
 			Keyboard: Sayo O2C;
 			Typing: Alternate;</p>
-
-			<p>Quit for 3 months.</p>
 		</div>
 
 		<h2>Some configs(Any linux)</h2>
@@ -47,7 +45,7 @@
 
 		<h2>Skin</h2>
 		<div class="container">
-			<p>Version: Release-v3-241005<br>
+			<p>Version: Release-v3-241007-stable<br>
 			Note: only hd(@2x), std+mania.<br>
             Please wait for several minutes to download the skin(I have to upload the skin).</p>
 			
