--- a/pages/osu/osu-cutt37.html
+++ b/pages/osu/osu-cutt37.html
@@ -53,8 +53,8 @@
 			From local(osk): <a href="../../files/packages/global/Idontknow.osk">Download</a></p>
 
 			<p>Source:<br>
-			You can download this and modify whatever you want.<br>
-			Be careful with the usage of fonts.<br>
+			You can use this for personal use,<br>
+			ask me if you want to republish this.<br>
 			From local: <a href="../../files/packages/global/Source.zip">Download</a></p>
 			</p>
 		</div>
