--- a/pages/osu/osu-cutt37.html
+++ b/pages/osu/osu-cutt37.html
@@ -20,7 +20,7 @@
 			<p>Hello, there.<br>
 			Welcome to my website.</p>
 
-			<p>Active on lazer-osu.</p>
+			<p>Not pretty active</p>
 
 			<p>Preset:<br>
 			Computer: Dell Inspiron 15-3530;<br>
@@ -45,7 +45,7 @@
 
 		<h2>Skin</h2>
 		<div class="container">
-			<p>Version: Release-v3-241007-stable<br>
+			<p>Version: Release-v3-241010-stable<br>
 			Note: only hd(@2x), std+mania.<br>
             Please wait for several minutes to download the skin(I have to upload the skin).</p>
 			
