--- a/pages/osu/osu-cutt37.html
+++ b/pages/osu/osu-cutt37.html
@@ -24,28 +24,28 @@
 
 			<p>Preset:<br>
 			Computer: Dell Inspiron 15-3530;<br>
-			Mouse: Logitech G102 (3 acceleration);<br>
+			Mouse: Logitech G102 (2 acceleration);<br>
 			Keyboard: Sayo O2C;
 			Typing: Alternate;</p>
 		</div>
 
 		<h2>Some configs(Any linux)</h2>
 		<div class="container">
-			<p>Mouse acceleration: -0.5(Current)</p>
+			<p>Mouse acceleration: 0(Current)</p>
 			
 			<p>50-mouse-acceleration.conf<br>
 			Section "InputClass"<br>
 			&emsp;Identifier ""<br>
 			&emsp;Driver "libinput"<br>
 			&emsp;MatchIsPointer "yes"<br>
-			&emsp;Option "AccelProfile" "<u>flat</u>"<br>
-			&emsp;Option "AccelSpeed" "-0.5"<br>
+			&emsp;Option "AccelProfile" "flat"<br>
+			&emsp;Option "AccelSpeed" "0"<br>
 			EndSection</p>
 		</div>
 
 		<h2>Skin</h2>
 		<div class="container">
-			<p>Version: Release-v3-241010-stable<br>
+			<p>Version: Release-v3-241011<br>
 			Note: only hd(@2x), std+mania.<br>
             Please wait for several minutes to download the skin(I have to upload the skin).</p>
 			
