--- a/pages/osu/osu-cutt37.html
+++ b/pages/osu/osu-cutt37.html
@@ -20,12 +20,12 @@
 			<p>Hello, there.<br>
 			Welcome to my website.</p>
 
-			<p>Not pretty active</p>
+			<p>Status: Not very active.</p>
 
 			<p>Preset:<br>
 			Computer: Dell Inspiron 15-3530;<br>
-			Mouse: Logitech G102 (2 acceleration);<br>
-			Keyboard: Sayo O2C;
+			Mouse: Logitech G102 (2 accel);<br>
+			Keyboard: Sayo O2C + Greywood-v3 switches;<br>
 			Typing: Alternate;</p>
 		</div>
 
@@ -45,9 +45,8 @@
 
 		<h2>Skin</h2>
 		<div class="container">
-			<p>Version: Release-v3-241011<br>
-			Note: only hd(@2x), std+mania.<br>
-            Please wait for several minutes to download the skin(I have to upload the skin).</p>
+			<p>Version: Release-v3<br>
+			Note: only hd(@2x), std+mania.</p>
 			
 			<p>Mediafire(osk): <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Download</a><br>
 			From local(osk): <a href="../../files/packages/global/Idontknow.osk">Download</a></p>
