--- a/pages/osu/osu-cutt37.html
+++ b/pages/osu/osu-cutt37.html
@@ -46,6 +46,7 @@
 		<h2>Skin</h2>
 		<div class="container">
 			<p>Version: Release-v3<br>
+			Probably the last edit.<br>
 			Note: only hd(@2x), std+mania.</p>
 			
 			<p>Mediafire(osk): <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Download</a><br>
