--- a/pages/arch/arch.html
+++ b/pages/arch/arch.html
@@ -26,13 +26,15 @@
         <h2>Notes:</h2>
 		<div class="container">
 			<ol>
-				<li>I suggest you read these official wiki:<br>
-				<a href="https://wiki.archlinux.org/title/Installation_guide">
-				First pre-install</a><br>
-				<a href="https://wiki.archlinux.org/title/General_recommendations">
-                Software & Hardware Issues/Wikis</a></li>
-
-				<li>Take your responsibility.</li>
+				<li>Read this two official wiki:<br>
+					<a href="https://wiki.archlinux.org/title/Installation_guide">First pre-install</a><br>
+					<a href="https://wiki.archlinux.org/title/General_recommendations">
+						Software & Hardware Issues/Wikis</a>
+				</li>
+                <li>Manual install is hard if you don't have linux basics. You can try ubuntu, mint...</li>
+                <li>You can try <u>archinstall</u>, and stop reading this guide.</li>
+				<li>Or, you want to learn some linux stuff, you can continue.</li>
+				<li>Be careful when executing commands.</li>
 			</ol>	
 		</div>
 
