--- a/404.html
+++ b/404.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
-<p>Page not found ;&lpar; <a onclick="history.back()">Go back</a></p>
+<p>Page not found ;&lpar;<br>
+<a onclick="history.back()">Go back</a></p>
 </body>
 </html>
