--- a/pages/osu/osu-cutt37.html
+++ b/pages/osu/osu-cutt37.html
@@ -26,7 +26,8 @@
 			Computer: Dell Inspiron 15-3530;<br>
 			Mouse: Logitech G102 (2 accel);<br>
 			Keyboard: Sayo O2C + Greywood-v3 switches;<br>
-			Typing: Alternate;</p>
+			Typing: Alternate;
+			Skin: osu triangles</p>
 		</div>
 
 		<h2>Some configs(Any linux)</h2>
@@ -42,22 +43,9 @@
 			&emsp;Option "AccelSpeed" "0"<br>
 			EndSection</p>
 		</div>
-
-		<h2>Skin</h2>
-		<div class="container">
-			<p>Version: Release-v3<br>
-			Probably the last edit.<br>
-			Note: only hd(@2x), std+mania.</p>
-			
-			<p>Mediafire(osk): <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Download</a><br>
-			From local(osk): <a href="../../files/packages/global/Idontknow.osk">Download</a></p>
-
-			<p>Source:<br>
-			You can use this for personal use,<br>
-			ask me if you want to republish this.<br>
-			From local: <a href="../../files/packages/global/Source.zip">Download</a></p>
-			</p>
-		</div>
+		
+		<p>Idk why skinning and mapping are so fr34king difficult.<br>
+		I waste a bunch of times on these sh1t.</p>
 	</div>
 </body>
 </html>
