--- a/pages/osu/osu-cutt37.html
+++ b/pages/osu/osu-cutt37.html
@@ -27,7 +27,7 @@
 			Mouse: Logitech G102 (2 accel);<br>
 			Keyboard: Sayo O2C + Greywood-v3 switches;<br>
 			Typing: Alternate;
-			Skin: osu triangles</p>
+			Skin: <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Idontknow</a></p>
 		</div>
 
 		<h2>Some configs(Any linux)</h2>
@@ -43,9 +43,6 @@
 			&emsp;Option "AccelSpeed" "0"<br>
 			EndSection</p>
 		</div>
-		
-		<p>Idk why skinning and mapping are so fr34king difficult.<br>
-		I waste a bunch of times on these sh1t.</p>
 	</div>
 </body>
 </html>
