--- a/index.html
+++ b/index.html
@@ -1,31 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Home</title>
+	<title>Home: 首页</title>
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<link rel="stylesheet" type="text/css" href="./files/styles/main.css">
-	<link rel="stylesheet" type="text/css" href="./files/styles/fonts.css">
-	<link rel="stylesheet" type="text/css" href="./files/styles/colors.css">
-
-	<script type="text/javascript" src="./scripts/main.js"></script>
-	<script type="text/javascript" src="./scripts/fonts.js"></script>
-	<script type="text/javascript" src="./scripts/colors.js"></script>
+	<link rel="stylesheet" type="text/css" href="./decorate/main.css">
 </head>
 
 <body>
 	<div id="Menu">
-		<a href="./" id="current">Home</a>
-		<a href="./pages/arch/arch.html" class="available">Archlinux-Installation</a>
-		<a href="./pages/osu/osu-cutt37.html" class="available">My-osu!-infos</a>
-		<a href="./pages/others/any.html" class="available">Various-stuff</a>
+		<a href="./" id="current">Home: 首页</a>
+		<a href="./pages/arch-install">Arch installation: arch的下载</a>
+		<a href="./pages/osu/osu-cutt37.html">Osu infos: osu信息</a>
+		<a href="./pages/various/any.html">Various: 杂事</a>
 	</div>
 
-	<div id="Footer">
-		<p>If you find some problems on this website, you can mail to:<br>
-		cutt37@outlook.com</p>
+	<div id="Content">
+		<h2>Some content goes here...</h2>
+		<div class="container">
+			<p>A website record various stuff.
+			<p>Idk how to fill this website.
+		</div>
 	</div>
 </body>
 </html>
