--- a/pages/arch/arch_install.html
+++ b/pages/arch/arch_install.html
@@ -12,9 +12,9 @@
 
 <body>
 	<div id="Menu">
-		<a href="./arch-install" id="current">Arch</a>
-		<a href="./arch-config">Config</a>
-		<a href="./arch-extra">Others</a>
+		<a href="./arch_install" id="current">Arch</a>
+		<a href="./arch_config">Config</a>
+		<a href="./arch_extra">Others</a>
 	</div>
 	
 	<div id='Content'>
