--- a/pages/arch/arch_config.html
+++ b/pages/arch/arch_config.html
@@ -13,9 +13,9 @@
 
 <body>
 	<div id="Menu">
-		<a href="./arch-install" id="available">Arch</a>
-		<a href="./arch-config" id="current">Config</a>
-		<a href="./arch-extra" id="available">Others</a>
+		<a href="./arch_install">Arch</a>
+		<a href="./arch_config" id="current">Config</a>
+		<a href="./arch_extra">Others</a>
 	</div>
 
 	<div id="Content">
