--- a/pages/arch/arch_extra.html
+++ b/pages/arch/arch_extra.html
@@ -13,9 +13,9 @@
 
 <body>
 	<div id="Menu">
-		<a href="./arch-install">Home</a>
-		<a href="./arch-config">Config</a>
-		<a href="./arch-extra" id="current">Others</a>
+		<a href="./arch_install">Home</a>
+		<a href="./arch_config">Config</a>
+		<a href="./arch_extra" id="current">Others</a>
 	</div>
 
 	<div id="Content">
