--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
 	<div id="Menu">
 		<a href="./" id="current">Home: 首页</a>
-		<a href="./pages/arch_install">Arch installation: arch的下载</a>
-		<a href="./pages/osu/osu_cutt37.html">Osu infos: osu信息</a>
-		<a href="./pages/various/any.html">Various: 杂事</a>
+		<a href="./pages/arch/arch_install">Arch installation: arch的下载</a>
+		<a href="./pages/osu/osu_cutt37">Osu infos: osu信息</a>
+		<a href="./pages/various/any">Various: 杂事</a>
 	</div>
 
 	<div id="Content">
