--- a/pages/arch/arch_install.html
+++ b/pages/arch/arch_install.html
@@ -83,7 +83,7 @@
 
 			<tr>
 				<td>nvme0n1p3</td>
-				<td>f2fs(or ext4)</td>
+				<td>f2fs</td>
 				<td>Remain</td>
 			</tr>
 			</table>
@@ -110,7 +110,7 @@
 		<h2>3.Packages</h2>
 		<div class="container">
 			<p>Now you should setup the mirror to download the packages.
-			Some useful tools:
+			<p>Some useful tools:
 			<a href="https://archlinux.org/mirrors/status/">Arch mirrorlist</a>
 			<a href="https://archlinux.org/mirrorlist/">Arch generator</a>
 			<p>vim /etc/pacman.d/mirrorlist
