--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<script type="text/javascript" data-domain="cutt37.is-a.dev" src="https://analytics.is-a.dev/js/script.js" defer></script>
+	<link rel="stylesheet" type="text/css" href="./decorate/main.css">
 </head>
 
 <body>
