--- a/pages/arch/arch_config.html
+++ b/pages/arch/arch_config.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Config</title>
+	<title>Arch: Config</title>
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,16 +13,16 @@
 
 <body>
 	<div id="Menu">
-		<a href="./arch_install">Arch</a>
-		<a href="./arch_config" id="current">Config</a>
-		<a href="./arch_extra">Others</a>
+		<a href="./arch_install">Arch: Install</a>
+		<a href="./arch_config" id="current">Arch: Config</a>
+		<a href="./arch_extra">Arch: Others</a>
 	</div>
 
 	<div id="Content">
         <h1>Desktop configs</h1>
 		<h2>Services and additional packages:</h2>		
 		<div class="container">
-			<p>Login with your_account
+			<p>Login with <i>your_account</i>
 			
 			<br><br>
 
