--- a/pages/arch/arch_extra.html
+++ b/pages/arch/arch_extra.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Dot exe file on linux</title>
+	<title>Arch: Others</title>
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,9 +13,9 @@
 
 <body>
 	<div id="Menu">
-		<a href="./arch_install">Home</a>
-		<a href="./arch_config">Config</a>
-		<a href="./arch_extra" id="current">Others</a>
+		<a href="./arch_install">Arch: Home</a>
+		<a href="./arch_config">Arch: Config</a>
+		<a href="./arch_extra" id="current">Arch: Others</a>
 	</div>
 
 	<div id="Content">
@@ -44,7 +44,7 @@
 			<p>winetricks
 			<p>Select "Select the default wineprefix"
 			<p>Select "Install a Windows DLL or component"
-			<p>Select "dotnet40" and "dotnet45"
+			<p>Select "dotnet40" or "dotnet45"
 
 			<br><br>
 
