--- a/pages/arch/arch_install.html
+++ b/pages/arch/arch_install.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Arch</title>
+	<title>Arch: Install</title>
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,9 +12,9 @@
 
 <body>
 	<div id="Menu">
-		<a href="./arch_install" id="current">Arch</a>
-		<a href="./arch_config">Config</a>
-		<a href="./arch_extra">Others</a>
+		<a href="./arch_install" id="current">Arch: Install</a>
+		<a href="./arch_config">Arch: Config</a>
+		<a href="./arch_extra">Arch: Others</a>
 	</div>
 	
 	<div id='Content'>
@@ -34,14 +34,14 @@
 		<h2>1.Connect to the internet(wireless)</h2>
 		<div class="container">
 			<p><u>ifconfig</u> to check the network card.
-			<p>Here <b>wlan0</b> as default.
+			<p>Here <b>wlan0</b> as default(Since I'm on laptop).
 
 			<br><br>
 
 			<p>iwctl
 			<p>station wlan0 scan
 			<p>station wlan0 get-networks
-			<p>station wlan0 connect <u>select_network</u>
+			<p>station wlan0 connect <i>select_yourNetwork</i>
 
 			<br><br>
 
@@ -50,19 +50,24 @@
 
 		<h2>2.Disk partition and format</h2>
 		<div class="container">
-			<p>If you are using legacy bios boot,
-			<p>you don't have to create the efi partition and the <u>efibootmgr</u> package.
-			<p>Before partition the disk, make sure the target isn't the udisk.
-			<p>also notice some disks names are different.
-			<p>If it's a nvme disk it should be /dev/<u>nvmeXnYpZ</u>.
+			<p>If you have an old pc, you should check your bios that support uefi or not.
+			<p>Since there are two choice to install arch: uefi and legacy.
+			<p>On legacy you don't have to create the efi partition and install <i>efibootmgr</i>.
 
 			<br><br>
 
-			<p><u>fdisk -l</u> to check disks on your computer.
-			<p><u>cfdisk</u> to create partition table.
+			<p>Be clear what disk you are going to partition.
+			<p>If it's a m.2 disk it should be something like <i>/dev/nvme0n1p1</i>.
+			<p>If it's a sata or some udisk it should be <i>/dev/sda</i>
+			<p>Btw don't format your installation media.
+
+			<br><br>
+
+			<p><u>fdisk -l</u> to list disks on your computer.
+			<p><u>cfdisk</u>
 
 			<table>
-			<caption>Partition table</caption>
+			<caption>Partition table example</caption>
 			<tr>
 				<th>Part(s)</th>
 				<th>Type</th>
@@ -91,12 +96,13 @@
 			<div class="subcontainer">
 				<p>Formatting:
 				<p>Here are some filesystems like: ext4, brtfs, xfs, f2fs...
+				<p>I choose ext4 anyway.
+
+				<br><br>
+
 				<p>mkfs.fat -F 32 /dev/nvme0n1p1
 				<p>mkswap /dev/nvme0n1p2
 				<p>swapon /dev/nvme0n1p2
-				<p>mkfs.f2fs /dev/nvme0n1p3
-				<p>If you want to make a ext4 partition disk for root(not account but one of disk partition instead),
-				<p>then type this below:
 				<p>mkfs.ext4 /dev/nvme0n1p3
 
 				<br><br>
@@ -109,8 +115,8 @@
 
 		<h2>3.Packages</h2>
 		<div class="container">
-			<p>Now you should setup the mirror to download the packages.
-			<p>Some useful tools:
+			<p>Now you should setup the mirror and download the packages.
+			<p>Some mirrors:
 			<a href="https://archlinux.org/mirrors/status/">Arch mirrorlist</a>
 			<a href="https://archlinux.org/mirrorlist/">Arch generator</a>
 			<p>vim /etc/pacman.d/mirrorlist
@@ -129,9 +135,8 @@
 			<br><br>
 
 			<p>Graphic card driver:
-			<p>intel: <u>vulkan-intel</u>,<u>intel-media-driver</u>(gen5 or newer)
-			,<u>libva-intel-driver</u>(GMA4500 to gen8)]
-			<p>amd: <u>xf86-video-amd</u> <u>vulkan-radeon</u>
+			<p>intel: <u>vulkan-intel</u>,<u>intel-media-driver</u>,<u>libva-intel-driver</u>
+			<p>amd: <u>xf86-video-amd</u>,<u>vulkan-radeon</u>
 
 			<br><br>
 
@@ -152,7 +157,7 @@
 
 		<h2>4.Time and language</h2>
 		<div class="container">
-			<p><u>ls /usr/share/zoneinfo</u> to check places.
+			<p><u>ls /usr/share/zoneinfo</u> to list timezone.
 			<p>ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
 			<p>hwclock --systohc
 
@@ -172,8 +177,7 @@
 		<h2>5.GRUB config</h2>
 		<div class="container">
 			<p>Legacy:
-			<p>grub-install --target=i386-pc <u>/dev/...</u>
-			<p>Note: /dev/... is a partition part.
+			<p>grub-install --target=i386-pc <u>/dev/nvme0n1p3</u>
 			<p>UEFI:
 			<p>grub-install --target=x86_64-efi --efi-directory=/boot
 			
