--- a/pages/arch/arch_extra.html
+++ b/pages/arch/arch_extra.html
@@ -44,7 +44,7 @@
 			<p>winetricks
 			<p>Select "Select the default wineprefix"
 			<p>Select "Install a Windows DLL or component"
-			<p>Select "dotnet40" or "dotnet45"
+			<p>Select "dotnet40" and "dotnet45"
 
 			<br><br>
 
