--- a/pages/arch/arch_config.html
+++ b/pages/arch/arch_config.html
@@ -26,12 +26,12 @@
 			
 			<br><br>
 
-			<p>sudo systemctl enable acpid bluetooth tlp NetworkManagers
+			<p>sudo systemctl enable acpid bluetooth tlp xdm NetworkManager
 			<p>sudo systemctl start NetworkManager
 			
 			<br><br>
 
-			<p>Connect the internet with <u>nmtui</u>, then install the following packages(decided by yourself):
+			<p>Connect the internet with <u>nmtui</u>, then install the following packages(decided by you):
 
 			<p>sudo pacman -S i3{-wm,lock,status} \
 			<p>network-manager-applet pcmanfm-gtk3 xarchiver dmenu \
@@ -42,34 +42,32 @@
 
 		<h2>Config:</h2>
 		<div class="container">
+            <p>Set xdm:
+            <p>touch .xsession
+            <p>echo i3 &gt; .xsession
+            <p>chmod +x .xsession
+
+            <br><br>
+
+            <p>Get yay:
+            <p>git clone https://aur.archlinux.org/yay.git
+            <p>pacman -S go
+            <p>cd yay
+            <p>makepkg -si
+
+            <br><br>    
+
 			<p>Missing firmwares:
 			<p>See: <a href="https://wiki.archlinux.org/title/Mkinitcpio#Possibly_missing_firmware_for_module_XXXX">
 				mkinitcpio - ArchWiki</a>
-			<p>yay -S your_missing_firmwares
-
-			<br><br>
-
+			<p>yay -S your_missingFirmwares
 			<p>I'm missing these firmwares so I'll type:
 			<p>yay -S {aic94xx,ast,wd719x}-firmware upd72020x-fw
 			<p>mkinitcpio -P
 
 			<br><br>
 
-			<p>sudo echo i3 &gt; .xinitrc
-
-			<br><br>
-
-			<p>wget https://cutt37.github.io/files/packages/arch/yay-12.1.0-1-x86_64.pkg.tar.zst
-			<p>yay -S slim archlinux-themes-slim ttf-symbola
-
-			<br><br>
-
-			<p>Slim theme:
-			<p>sudo systemctl enable slim
-			<p>sudo vim /etc/slim.conf
-			<p>Type /current_theme to search.
-			<p>Find this line and uncomment:
-			<p>current_theme archlinux-simplyblack
+			<p>yay -S ttf-symbola
 
 			<br><br>
 
@@ -79,12 +77,12 @@
 			<br><br>
 
 			<p>My config for i3:<br>
-			<p>Download <a href="../../files/fedora/config.zip">here</a> or execute the following command:
+			<p>Download <a href="../../files/fedora/config.zip">here</a> or:
 			<p>wget https://cutt37.github.io/files/packages/fedora/config.zip
 
 			<br><br>
 
-			<p>Config vim:
+			<p>Config vim(if you need):
 			<p>sudo pacman -S npm nodejs
 			<p>vim
 			<p>:PlugInstall
