--- a/pages/arch/arch_install.html
+++ b/pages/arch/arch_install.html
@@ -93,30 +93,27 @@
 			</tr>
 			</table>
 
-			<div class="subcontainer">
-				<p>Formatting:
-				<p>Here are some filesystems like: ext4, brtfs, xfs, f2fs...
-				<p>I choose ext4 anyway.
+			<p>Formatting:
+			<p>Here are some filesystems like: ext4, brtfs, xfs, f2fs...
+			<p>I choose ext4 here.
 
-				<br><br>
+			<br><br>
 
-				<p>mkfs.fat -F 32 /dev/nvme0n1p1
-				<p>mkswap /dev/nvme0n1p2
-				<p>swapon /dev/nvme0n1p2
-				<p>mkfs.ext4 /dev/nvme0n1p3
+			<p>mkfs.fat -F 32 /dev/nvme0n1p1
+			<p>mkswap /dev/nvme0n1p2
+			<p>swapon /dev/nvme0n1p2
+			<p>mkfs.ext4 /dev/nvme0n1p3
 
-				<br><br>
+			<br><br>
 
-				<p>Mounting:
-				<p>mount /dev/nvme0n1p3 /mnt
-				<p>mount --mkdir /dev/nvme0n1p1 /mnt/boot
-			</div>
+			<p>Mounting:
+			<p>mount /dev/nvme0n1p3 /mnt
+			<p>mount --mkdir /dev/nvme0n1p1 /mnt/boot
 		</div>
 
 		<h2>3.Packages</h2>
 		<div class="container">
-			<p>Now you should setup the mirror and download the packages.
-			<p>Some mirrors:
+			<p>Some mirrors may improve your download speed:
 			<a href="https://archlinux.org/mirrors/status/">Arch mirrorlist</a>
 			<a href="https://archlinux.org/mirrorlist/">Arch generator</a>
 			<p>vim /etc/pacman.d/mirrorlist
@@ -125,10 +122,10 @@
 		
 			<br><br>
 
-			<p>pacstrap -K /mnt linux linux-firmware base \
-			<p>base-devel efibootmgr grub \
-			<p>networkmanager pipewire pipewire-{alsa,jack,pulse} mesa \
-			<p>xorg xorg-server udisks2 gvfs ntfs-3g wget git vi vim \
+			<p>pacstrap -K /mnt linux linux-firmware base base-devel \
+            <p>efibootmgr grub networkmanager 
+            <p>pipewire pipewire-{alsa,jack,pulse} mesa \
+			<p>xorg xorg-server xorg-xdm udisks2 gvfs ntfs-3g wget git vi vim \
 			<p>wqy-microhei-lite terminus-font bluez bluez-utils \
 			<p>alsa-{utils,plugins} zip {un,p7}zip tlp acpi{d,light}
 
@@ -147,7 +144,7 @@
 			<br><br>
 
 			<p>pacstrap /mnt intel-ucode intel-media-driver vulkan-intel \
-			<p>xf86-video-fbdev linux-firmware-qlogic
+			<p>xf86-video-fbdev linux-firmware-qlogic(for me)
 
 			<br>
 
@@ -165,13 +162,12 @@
 
 			<p>vim /etc/locale.gen
 			<p>Find your locale and uncomment it.
-			<p>Here I uncomment <u>en_US.UTF-8</u> <u>zh_CN.UTF-8</u>
 
 			<br><br>
 
 			<p>locale-gen
 			<p>echo LANG=en_US.UTF-8 &gt; /etc/locale.conf
-			<p>echo <u>your-hostname</u> &gt; /etc/hostname
+			<p>echo <u>your-hostname</u>(eg. archlinux) &gt; /etc/hostname
 		</div>
 
 		<h2>5.GRUB config</h2>
@@ -183,11 +179,12 @@
 			
 			<br><br>
 
+            <p>Not 100% sure these code do
 			<p>vim /etc/default/grub
 			<p>Find <u>GRUB_CMDLINE_LINUX_DEFAULT</u> and add these:
 			<p>fbcon=nodefer
-			<p>modprobe.blacklist=<i>iTCO_wdt</i> (disable watchdog)
-			<p>resume=<i>/dev/nvme0n1p2</i> (enable hibernate)
+			<p>modprobe.blacklist=<i>iTCO_wdt</i> (if you want to disable watchdog)
+			<p>resume=<i>/dev/nvme0n1p2</i> (if you want your pc hibernate)
 			<p>video=efifb:nobgrt
 
 			<br><br>
@@ -198,38 +195,28 @@
 		<h2>6.Others</h2>
 		<div class="container">
 			<p>Add one account:
-			<p>useradd -m -G audio,storage,video,wheel <u>your-accountname</u>
-			<p>passwd <u>your-accountname</u>
+			<p>useradd -m -G audio,storage,video,wheel <u>your-accountName</u>
+			<p>passwd <u>your-accountName</u>
 			<p>visudo
 			<p>Uncomment <u>%wheel ALL=(ALL:ALL) ALL</u>
 
-			<div class="subcontainer">
-				<p>Add hibernate:
-				<p>vim /etc/mkinitcpio.conf
-				<p>Find <u>HOOKS=(...)</u>
-				<p>Add <u>resume</u> <b>behind</b> <u>filesystems</u>
-				<p>It should look like this:
-				<p>HOOKS=(... filesystem <b>resume</b>)
+			<p>Add hibernate(if you want):
+			<p>vim /etc/mkinitcpio.conf
+			<p>Find <u>HOOKS=(...)</u>
+			<p>Add <u>resume</u> <b>behind</b> <u>filesystems</u>
+			<p>It should look like this:
+			<p>HOOKS=(... filesystem <b>resume</b>)
 
-				<br><br>
+			<br><br>
 
-				<p>vim /etc/systemd/logind.conf
-				<p>Uncomment <u>HandleLidSwitch</u> and <u>HandleLidSwitchExternalPower</u>
+			<p>vim /etc/systemd/logind.conf
+			<p>Uncomment <u>HandleLidSwitch</u> and <u>HandleLidSwitchExternalPower</u>
 
-				<br><br>
+			<br><br>
 
-				<p>What are <b>HandleLidSwitch</b> and <b>HandleLidSwitchExternalPower</b>?
-				<p>If you are using a laptop, when you close the lid,
-				<p>usually the computer don't hibernate if you dont add these.
-				<p><b>HandleLidSwitchExternalPower</b> means if you are charging,
-				<p>when you close the lid, what pc is going to do.
-
-				<br><br>
-
-				<p>HandleLidSwitch=<i>hibernate</i>
-				<p>HandleLidSwitchExternalPower=<i>suspend</i>
-			</div>
-
+			<p>HandleLidSwitch=<i>hibernate(or keep default suspend)</i>
+			<p>HandleLidSwitchExternalPower=<i>suspend</i>
+		
 			<p>tty font:
 			<p>echo FONT=ter-132n(n-normal b-bold) &gt; /etc/vconsole.conf
 
