--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
 <body>
 	<div id="Menu">
-		<a href="./" id="current">Home: 首页</a>
-		<a href="./pages/arch/arch_install">Arch installation: arch的下载</a>
-		<a href="./pages/osu/osu_cutt37">Osu infos: osu信息</a>
-		<a href="./pages/various/any">Various: 杂事</a>
+		<a href="./" id="current">Home</a>
+		<a href="./pages/arch/arch_install">Arch installation</a>
+		<a href="./pages/osu/osu_cutt37">Osu infos</a>
+		<a href="./pages/various/any">Various</a>
 	</div>
 
 	<div id="Content">
