--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -39,14 +39,16 @@
         <div class="container">
             <p>Since it's pretty slow to access osu website(osu is using cloudflare..?),
             <p>I find a way to get a fast connection.
+
+            <br><br>
+
             <p>Download this project
             <p><a href="https://github.com/XIU2/CloudflareSpeedTest">https://github.com/XIU2/CloudflareSpeedTest</a>
-            <p>Execute a file like CloudflareST.
+            <p>Execute a file likes CloudflareST.
             <p>Wait till it gets an output.
             <p>Choose the fast ip in result.csv.
             <p>Then change your host file.
-            <p>For example:
-            <p>Download <a href="https://37cut.is-a.dev/files/etc/hosts">here</a>
+            <p>Download the host file <a href="https://37cut.is-a.dev/files/etc/hosts">here</a>
         </div>
 	</div>
 </body>
