--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -13,15 +13,15 @@
 
 <body>
 	<div id="Content">
-		<h2>Basic</h2>		
+		<h2>Intro</h2>
 		<div class="container">
-			<p>Preset:
-			<p>Computer: Dell Inspiron 15-3530;
-			<p>Mouse: Logitech G102 (2 accel);
-			<p>Keyboard: Sayo O2C + Greywood v3 switch;
-			<p>Typing: Alternate;
-			<p>Skin: <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Idontknow</a>
-		</div>
+			<p>Setup:
+			<p>&emsp;Mouse: Logitech G102 (2 accel);
+			<p>&emsp;Keyboard: Sayo O2C + Greywood v3 switch;
+            <p>&emsp;Resolution: 1920x1080, 15&quot;6			
+            <p>&emsp;Typing: Alternate;
+			<p>&emsp;Skin(with 100% made by me): <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Idontknow</a>	
+        </div>
 
 		<h2>Mouse config</h2>
 		<div class="container">
@@ -35,20 +35,21 @@
 			<p>EndSection
 		</div>
 
-        <h2>A method to open osu faster(Maybe)</h2>
+        <h2>A method to open osu faster(maybe)</h2>
         <div class="container">
-            <p>Since it's pretty slow to access osu website(osu is using cloudflare..?),
+            <p>Since it's pretty slow to access osu website(me in China),
             <p>I find a way to get a fast connection.
+            <p>At least I can finally access the bancho now(I've been struggling to login for a long time before).
 
             <br><br>
 
             <p>Download this project
             <p><a href="https://github.com/XIU2/CloudflareSpeedTest">https://github.com/XIU2/CloudflareSpeedTest</a>
-            <p>Execute a file likes CloudflareST.
+            <p>Execute a file which is called CloudflareST(or CloudflareST.exe sth else).
             <p>Wait till it gets an output.
-            <p>Choose the fast ip in result.csv.
+            <p>Choose the fast ip in "result.csv".
             <p>Then change your host file.
-            <p>Download the host file <a href="https://37cut.is-a.dev/files/etc/hosts">here</a>
+            <p>Example: <a href="https://37cut.is-a.dev/files/etc/hosts">Click me</a>
         </div>
 	</div>
 </body>
