--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -35,7 +35,7 @@
 			<p>EndSection
 		</div>
 
-        <h2>A method to open osu faster(maybe)</h2>
+        <h2>A method to boost your Internet(maybe)</h2>
         <div class="container">
             <p>Since it's pretty slow to access osu website(me in China),
             <p>I find a way to get a fast connection.
@@ -43,13 +43,21 @@
 
             <br><br>
 
-            <p>Download this project
-            <p><a href="https://github.com/XIU2/CloudflareSpeedTest">https://github.com/XIU2/CloudflareSpeedTest</a>
+            <p>1. Visit osu faster.
+            <p>Visit <a href="https://github.com/XIU2/CloudflareSpeedTest">this</a> website.
             <p>Execute a file which is called CloudflareST(or CloudflareST.exe sth else).
             <p>Wait till it gets an output.
             <p>Choose the fast ip in "result.csv".
             <p>Then change your host file.
             <p>Example: <a href="https://37cut.is-a.dev/files/etc/hosts">Click me</a>
+
+            <br><br>
+
+            <p>2. Download beatmap smoothly.
+            <p>Now go to <a href="https://github.com/KyuubiRan/BeatmapDownloader">this website.
+            <p>Go to releases(on the right of website), download "Release-x86.zip".
+            <p>Make a directory inside your osu folder like "Injector"
+            <p>Unzip Release-x86.zip, move Downloader.dll and Injector.exe to directory you've been created.
         </div>
 	</div>
 </body>
