--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -54,7 +54,7 @@
             <br><br>
 
             <p>2. Download beatmap smoothly.
-            <p>Now go to <a href="https://github.com/KyuubiRan/BeatmapDownloader">this website.
+            <p>Now go to <a href="https://github.com/KyuubiRan/BeatmapDownloader">this</a> website.
             <p>Go to releases(on the right of website), download "Release-x86.zip".
             <p>Make a directory inside your osu folder like "Injector"
             <p>Unzip Release-x86.zip, move Downloader.dll and Injector.exe to directory you've been created.
