--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -20,7 +20,7 @@
 			<p>&emsp;Keyboard: Sayo O2C + Greywood v3 switch;
             <p>&emsp;Resolution: 1920x1080, 15&quot;6			
             <p>&emsp;Typing: Alternate;
-			<p>&emsp;Skin(with 100% made by me): <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Idontknow</a>	
+			<p>&emsp;Skin(made by me): <a href="https://mediafire.com/file/ccwdmu9b07d3exu/Idontknow.osk/file">Idontknow</a>	
         </div>
 
 		<h2>Mouse config</h2>
