--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -53,11 +53,22 @@
 
             <br><br>
 
-            <p>2. Download beatmap smoothly.
+            <p>2. Download beatmap smoothly(sadly I can't use this anymore XP).
             <p>Now go to <a href="https://github.com/KyuubiRan/BeatmapDownloader">this</a> website.
             <p>Go to releases(on the right of website), download "Release-x86.zip".
             <p>Make a directory inside your osu folder like "Injector"
             <p>Unzip Release-x86.zip, move Downloader.dll and Injector.exe to directory you've been created.
+        </div>
+
+        <h2>Something like "Stable vs Lazer"</h2>        
+        <div class="container">
+            <p>I would stay at stable.
+            <p>I'd say Lazer is still not playable, though the key sounds correct and clear(while typing),
+            <p>but the approach things look so weird(reading so weird), still not better than stable.
+            <p>And I don't need bunches of fr**king options(in setting).
+            <p>But Stable's key sounds messing, I feel I'm a drunk man typing weirdly.
+            <p>At least Stable got a nice gaming.
+            <p>I can't play lazer well, just bad.
         </div>
 	</div>
 </body>
