--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -66,9 +66,10 @@
             <p>I'd say Lazer is still not playable, though the key sounds correct and clear(while typing),
             <p>but the approach things look so weird(reading so weird), still not better than stable.
             <p>And I don't need bunches of fr**king options(in setting).
-            <p>But Stable's key sounds messing, I feel I'm a drunk man typing weirdly.
+            <p>Also, hp drain confused me, like Lazer is easy than stable.
+            <p>Stable's key sounds messing(not clear).
             <p>At least Stable got a nice gaming.
-            <p>I can't play lazer well, just bad.
+            <p>I can't play lazer well, its just bad.
         </div>
 	</div>
 </body>
