--- a/pages/osu/osu_cutt37.html
+++ b/pages/osu/osu_cutt37.html
@@ -13,7 +13,8 @@
 
 <body>
 	<div id="Content">
-		<h2>Intro</h2>
+        <h1>About setup</h1>		
+        <h2>Intro</h2>
 		<div class="container">
 			<p>Setup:
 			<p>&emsp;Mouse: Logitech G102 (2 accel);
@@ -34,7 +35,9 @@
 			<p>&emsp;Option "AccelSpeed" "0"
 			<p>EndSection
 		</div>
-
+    </div>
+	<div id="Content">
+        <h1>Misc.</h1>
         <h2>A method to boost your Internet(maybe)</h2>
         <div class="container">
             <p>Since it's pretty slow to access osu website(me in China),
