--- a/pages/arch/arch_extra.html
+++ b/pages/arch/arch_extra.html
@@ -41,10 +41,7 @@
 
 			<br><br>
 
-			<p>winetricks
-			<p>Select "Select the default wineprefix"
-			<p>Select "Install a Windows DLL or component"
-			<p>Select "dotnet40" and "dotnet45"
+			<p>winetricks dotnet45
 
 			<br><br>
 
