--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<a href="./" id="current">Home</a>
 		<a href="./pages/arch/arch_install">Arch installation</a>
 		<a href="./pages/osu/osu_cutt37">Osu infos</a>
-		<a href="./pages/various/any">Various</a>
+		<a href="./pages/various/any">Misc.</a>
 	</div>
 
 	<div id="Content">
