--- a/pages/various/any.html
+++ b/pages/various/any.html
@@ -13,13 +13,25 @@
 
 <body>
 	<div id="Content">
-		<h2>Some notes(gimp)</h2>
+        <h2>About wine</h2>
+        <div class="container">
+            <p>wine-stable + winetricks is enough.
+            <p>Run <u>winecfg</u> to generate '.wine' folder(which stores an windows 'sandbox').
+            <p>Maybe you want to change the dpi, so go to graphics->screen resolution.
+            <p>And change it to a prefer value.
+
+            <br><br>
+
+            <p>Run <u>winetricks dotnet45</u>, and done.
+        </div>
+
+		<h2>Gimp things</h2>
 		<div class="container">
-			<p>Denoise+Sharpen:<br>
-			Filters-&gt;Blur-&gt;Selective Gaussian Blur<br>
-			Filters-&gt;Blur-&gt;Median Blur<br>
-            'Ctrl+,' or 'Ctrl+.' Fill bg/fg<br>
-			Filters-&gt;Enhance-&gt;Sharpen(Unsharp Mask)</p>
+			<p>Some denoise and sharpen things:
+			<p>Filters-&gt;Blur-&gt;Selective Gaussian Blur
+			<p>Filters-&gt;Blur-&gt;Median Blur
+            <p>'Ctrl+,' or 'Ctrl+.' Fill bg/fg
+			<p>Filters-&gt;Enhance-&gt;Sharpen(Unsharp Mask)
 		</div>
 		
 		<h2>Fixing stuff(I'm not sure good or bad)</h2>
